Fix overflow player name on all pages

--- a/client/src/Components/Styles/RankListItem.css
+++ b/client/src/Components/Styles/RankListItem.css
@@ -18,6 +18,8 @@
 .username {
     height: 15px;
     overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     margin-left: 10px;
     width: 60px !important;
 }
