--- a/client/src/Pages/Styles/Profile.css
+++ b/client/src/Pages/Styles/Profile.css
@@ -6,8 +6,8 @@
     min-width: 500px;
     max-width: 1100px;
     height: 70vh;
-    min-height: 720px;
-    max-height: 800px;
+    min-height: fit-content;
+    max-height: fit-content;
     margin-top: 10vh;
     flex-flow: row wrap;
     color: var(--accent-color);
@@ -20,10 +20,11 @@
     align-content: center;
     margin: auto;
     margin-top: 0;
+    /* margin-bottom: 0; */
     border-radius: 20px;
     background-color: var(--sub-color-transparent);
     width: 90%;
-    min-width: 690px;
+    min-width: 650px;
     height: fit-content;
     padding: 20px;
 }
@@ -58,6 +59,9 @@
 
 #edit-name-icon {
     display: flex;
+    position: absolute;
+    left: -30px;
+    bottom: 5px;
     justify-content: center;
     width: 1.8em;
     height: 1.8em;
@@ -94,10 +98,15 @@
 
 #edit-name-icon :hover, #edit-pic-icon :hover {
     cursor: pointer;
+
 }
 
 #user-name {
-    max-width: 150px;
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    /* max-width: 200px; */
     max-height: 70px;
 }
 
@@ -105,12 +114,14 @@
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
-    max-width: 300px;
+    max-width: 400px;
     width: fit-content;
     min-width: 100px;
     max-height: fit-content;
     min-height: 100px;
     text-align: left;
+    margin-left: 10px;
+
 }
 
 .label {
@@ -126,7 +137,7 @@
 #user-stats, #update-user {
     display: flex;
     flex-flow: row wrap;
-    justify-content: left;
+    justify-content: center;
     width: fit-content;
     max-width: 400px;
     min-width: 200px;
@@ -138,7 +149,8 @@
 
 #user-stats p, #update-user p {
     font-size: 1em;
-    width: 200px;
+    width: 180px;
+    margin-left: 20px;
 }
 
 h2 {
@@ -147,14 +159,12 @@ h2 {
 }
 
 #username-info {
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
     height: 50px;
 }
 
 #username-info, #rank-info {
     display: flex;
+    position: relative;
     flex-flow: row wrap;
     width: 100%;
 }
